# OpenGL-projects

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/camera_app/: CMakeLists.txt  camera.cpp
apps/coordinate_app/: CMakeLists.txt  coordinate.cpp
apps/dummy_app/: CMakeLists.txt  app.cpp
apps/shaders_app/: CMakeLists.txt  shaders.cpp
apps/textures_app/: CMakeLists.txt  textures.cpp
apps/transformation_app/: CMakeLists.txt  transformation.cpp
apps/triangle_app/: CMakeLists.txt  triangle.cpp
apps/window_app/: CMakeLists.txt  window.cpp
libs/: CMakeLists.txt
libs/common/include/: shader_s.h
libs/common/src/: CMakeLists.txt  shader_s.cpp
libs/dummy_lib/include/: dummy.h
libs/dummy_lib/src/: CMakeLists.txt  dummy.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: CMakeLists.txt  glad.c
libs/play_lib/src/: CMakeLists.txt  play.cpp
